# extra-decoders-support-for-n900

./: Features.md  Future.md  ProjectHome.md  Troubleshooting.md
decoders-support/: AUTHORS  COPYING  Makefile  configure  copyright
decoders-support/data/: 01_decoders-support.xml  Makefile  Makefile.in  notice
decoders-support/debian/: changelog  control  decoders-support.install  decoders-support.postinst  decoders-support.postrm
gst-ffmpeg-0.10.9/: Makefile  config.h  libtool  ltmain.sh
gst-ffmpeg-0.10.9/common/: Makefile
gst-ffmpeg-0.10.9/debian/: files  rules
gst-plugins-bad0.10-musepack/: Makefile  Makefile.in  _stdint.h  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  gst-plugins-bad.spec
gst-plugins-bad0.10-vp8/: Makefile  autogen.sh  config.h.in  gst-plugins-bad.spec
gst-plugins-good0.10-flv/: Makefile  _stdint.h  aclocal.m4  config.status  gst-plugins-good.spec
gst-plugins-good0.10-mkv/: Makefile  config.h  config.status  gst-plugins-good.spec  libtool
gst-plugins-ugly0.10-rm/: Makefile  _stdint.h  config.h  config.status  configure  configure.ac  libtool  ltmain.sh
trunk/decoders-support/: Makefile  Makefile.am  Makefile.in  config.status  configure.ac
trunk/decoders-support/data/: 01_decoders-support.xml  Makefile.am  Makefile.in  notice
trunk/decoders-support/data/share/applications/hildon/: mediaplayer-decoders.desktop
trunk/decoders-support/debian/: changelog  control  decoders-support.postinst  decoders-support.postrm  files  rules
trunk/decoders-support/debian/decoders-support/DEBIAN/: md5sums
wiki/: Features.wiki  Future.wiki  Troubleshooting.wiki
(+1593 files in other folders)
