desktopappsdir=$(datadir)/applications/hildon
desktopapps_DATA=share/applications/hildon/mediaplayer-decoders.desktop

mimedir = $(datadir)/mime/packages
mime_DATA = 01_decoders-support.xml

noticedir=$(datadir)/decoders-support
notice_DATA=notice

EXTRA_DIST = \
             $(mime_DATA) \
             $(dekstopapps_DATA) \
             $(notice_DATA)

